--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Domine&family=Kaushan+Script&family=Source+Serif+Pro&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
   <title>CampusQ</title>
 </head>
